--- a/package.json
+++ b/package.json
@@ -1,31 +1,36 @@
 {
-    "name": "arouca",
-    "version": "0.0.1",
-    "description": "Simple client side router with express like features.",
-    "main": "build/index.js",
-    "files": ["build"],
-    "scripts": {
-        "docs": "rm -R docs; node_modules/.bin/jsdoc -c jsdoc.json",
-        "prepublish": "./node_modules/.bin/babel -D src -d build",
-        "test": "./node_modules/.bin/zuul --local 4000 -- test/*.js"
-    },
-    "author": "Lasana Murray <lmurray@quenk.com> (http://quenk.com)",
-    "license": "Apache-2.0",
-    "devDependencies": {
-        "babelify": "^6.4.0",
-        "browserify": "^12.0.0",
-        "jsdoc": "git+https://github.com/jsdoc3/jsdoc.git",
-        "mocha": "^2.3.3",
-        "must": "^0.13.1",
-        "uglify-js": "^2.6.1",
-        "zuul": "^3.7.2"
-    },
-    "dependencies": {
-        "qs": "^5.2.0"
-    },
-    "keywords": [
-        "browser",
-        "router",
-        "express"
-    ]
+  "name": "arouca",
+  "version": "0.0.1",
+  "description": "Simple client side router with express like features.",
+  "main": "build/index.js",
+  "files": [
+    "lib"
+  ],
+  "scripts": {
+    "docs": "rm -R docs; node_modules/.bin/jsdoc -c jsdoc.json",
+    "build": "./node_modules/.bin/babel -D src -d lib",
+    "test": "./node_modules/.bin/zuul --local 4000 -- test/*.js"
+  },
+  "author": "Lasana Murray <lmurray@quenk.com> (http://quenk.com)",
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "babel-cli": "^6.9.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.9.0",
+    "babelify": "^6.4.0",
+    "browserify": "^12.0.0",
+    "jsdoc": "git+https://github.com/jsdoc3/jsdoc.git",
+    "mocha": "^2.3.3",
+    "must": "^0.13.1",
+    "uglify-js": "^2.6.1",
+    "zuul": "^3.7.2"
+  },
+  "dependencies": {
+    "qs": "^5.2.0"
+  },
+  "keywords": [
+    "browser",
+    "router",
+    "express"
+  ]
 }
