--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "piarco",
   "version": "0.1.1",
   "description": "Simple client side router with express like features.",
-  "main": "build/index.js",
+  "main": "lib/index.js",
   "files": [
     "lib"
   ],
